--- a/package.json
+++ b/package.json
@@ -44,14 +44,15 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
     "react": "^18.0.0",
-    "react-dom": "^16.13.1",
-    "react-scripts": "^3.4.1"
+    "react-dom": "^18.0.0",
+    "react-scripts": "^5.0.0"
   },
   "files": [
     "dist"
   ],
   "dependencies": {
     "avvvatars-react": "^0.4.2",
+    "postcss": "^8.0.0",
     "react-icons": "^4.3.1",
     "styled-components": "^5.3.5"
   }
